---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/unit_fun.arc

---
module @toplevel {
    func @crate_foo() -> () {
        return
    }

    func @crate_bar() -> () {
        %x_1 = constant @crate_foo : () -> ()
        // noop
        call_indirect %x_1() : () -> ()
        return
    }
}

